--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ classes/__pycache__/mytime.cpython-36.pyc
 classes/__pycache__/customer.cpython-36.pyc
 classes/__pycache__/__init__.cpython-36.pyc
 classes/__pycache__/__init__.cpython-36.pyc
+.vscode/settings.json
